2010-05-06  Noel O'Boyle

	* scripts/CMakeLists.txt: Place the SWIG-generated files in the
	source directory (TODO: Require -DRUN_SWIG for developers). Correct
	EQUAL to STREQUAL. Remove unnecessary soft link.

2010-05-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/tokenst.h: Add missing <sstream> header.

2010-05-06  Chris Morley

	* include/openbabel/tokenst.h: Add utility function toString()
	
	* src/formats/xml/xml.cpp: Use new reader when the input file
	changes, rather than resuing the old one. Was not working with
	input files with <?xml?> elements.
	
	* delete windows-vc2005 and windowsOBF which did not use CMake.
	  
2010-05-04  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/data.cpp: Add check for empty isotope rows (PR#2996661).

	* data/isotope.txt: Add some default isotopes for heavy elements
	up to element 118. Will need updates after next atomic mass
	evaluation.

2010-05-04  Jean Brefort  <jean.brefort@normalesup.org>

	* data/space-groups.txt: updated after group 205 Hall name fix.
	* src/math/scpaegroup.cpp: fixed group search for duplicate Hall names (grroups 3 and 68).

2010-04-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/ops/partialcharges.cpp: Add operation to calculate partial
	charges using any charge method, e.g., --partialcharge qeq.

	* src/CMakeLists.txt: Add it.

2010-04-26  Noel O'Boyle

	* test/CMakeLists.txt, test/testbindings.py, test/test_pybel.py:
	Separate the pybel tests from the Python binding tests
	* scripts/python/examples/testpybel.py: Get the Pybel tests to pass on
	Linux
	* scripts/CMakeLists.txt: Force the Python build to output to
	scripts/pybuild. Otherwise it created a temporary folder whose name
	differed from platform to platform (e.g. lib.linux-x86_64.2.6) which
	made it difficult to handle automatically.

2010-04-25  Noel O'Boyle

	* test\CMakeLists.txt, test\testbindings.py, test\testexample.py:
	Enable the use of the Python bindings for testing. Run the Pybel